Исправил путь к логотипу

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header_wrap">
           <nav class="logo-menu">
             <a class="logo-link" href="/">
-              <img class="logo" src="/svg/noemi-logo.svg" alt="noemi-logo"/></a>
+              <img class="logo" src="svg/noemi-logo.svg" alt="noemi-logo"/></a>
 
             <button class="menu-checkbox checkbox-hidden">
               <span class="menu-mobile">Открыть меню</span>
