--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MQ-diplom</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div class="wrap">    <!-- Обертка страницы -->
+        <!-- === Обертка страницы === -->
+    <div class="wrap">
 
       <!-- Хедер страницы -->
       <header class="header">
