Добавил ссылки в блоке в тренде

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 </li>
               </ul>
 
-              <h2 class="card__title">Сейчас в тренде: сад на подоконнике</h2>
+              <h2 class="card-title">
+                <a class="trend-link" href="#!">Сейчас в тренде: сад на подоконнике</a>
+              </h2>
             </div>
           </article>
 
@@ -85,7 +87,9 @@
                 </li>
               </ul>
 
-              <h2 class="card__title">Собираемся в первый поход в горы</h2>
+              <h2 class="card-title">
+                <a class="trend-link" href="#!">Собираемся в первый поход в горы</a>
+              </h2>
             </div>
           </article>
 
@@ -100,8 +104,8 @@
                 </li>
               </ul>
 
-              <h2 class="card__title">
-                Сейчас в тренде: сколько витамина c в лимонах?
+              <h2 class="card-title">
+                <a class="trend-link" href="#!">Сейчас в тренде: сколько витамина c в лимонах?</a>
               </h2>
             </div>
           </article>
