Добавил пропущенную ссылку в блоке в тренде

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </ul>
 
               <h2 class="card__title">
-                Cыры на красивых картинках из интернета: какие они на вкус?
+                <a class="trend-link" href="#!">Cыры на красивых картинках из интернета: какие они на вкус?</a>
               </h2>
             </div>
           </article>
