Исправил ошибку в классе

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </li>
               </ul>
 
-              <h2 class="card__title">
+              <h2 class="card-title">
                 <a class="trend-link" href="#!">Cыры на красивых картинках из интернета: какие они на вкус?</a>
               </h2>
             </div>
